# cluster-map

./: pyproject.toml
cluster_map/: architecture.py  main.py
images/: a100_pci.xcf  a100_sxm.xcf  cpu.xcf  p100.xcf  quadro_rtx_800_b.xcf  ram.xcf  v100.xcf  v100_sxm.xcf
test/architecture/: test_composed_objects.py  test_image.py  test_layout.py
